refactor: 将element-plus改为BalmUI，因为element-plus的bug太多，无法正常使用

--- a/src/assets/style/global-variables.scss
+++ b/src/assets/style/global-variables.scss
@@ -1,4 +1,4 @@
 // 该文件中的变量是全局变量，在css文件和vue组件中可以直接使用
-$mainColor: #1ca8b3; // 网站主题色
+$mainColor: #2B8A9E; // 网站主题色
 $menuBg: #474747;
 $contentBg: #f5f5f5;
